--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ filelock==3.7.0
 flake8==4.0.1
 grpcio==1.46.3
 grpcio-tools==1.46.3
+gunicorn==20.1.0
 h11==0.13.0
 httptools==0.4.0
 identify==2.5.1
