--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,25 @@ services:
     depends_on:
       - web
 
+  etl_analytics:
+    build:
+      context: .
+      dockerfile: etl/Dockerfile
+    container_name: etl_analytics
+    working_dir: /etl/
+    volumes:
+      - ./etl:/etl/
+    env_file:
+      - .env.prod
+    depends_on:
+      - zookeeper
+      - clickhouse-node1
+      - clickhouse-node2
+      - clickhouse-node3
+      - clickhouse-node4
+      - kafka
+    command: python run.py
+
 volumes:
   zookeeper_data:
     driver: local
