--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -64,6 +64,22 @@ services:
     depends_on:
       - zookeeper
 
+  web:
+    build: .
+    container_name: ugc-api
+    restart: on-failure
+    volumes:
+      - ./src/:/usr/src/app/
+    env_file:
+      - .env.prod
+    environment:
+      - WAIT_HOSTS=kafka:9092
+      - WAIT_HOSTS_TIMEOUT=300
+      - WAIT_SLEEP_INTERVAL=30
+      - WAIT_HOST_CONNECT_TIMEOUT=30
+    depends_on:
+      - kafka
+
   etl_analytics:
     build:
       context: .
