--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -4,15 +4,35 @@ jobs:
   linter:
     name: Линтер
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [ 3.7, 3.8, 3.9 ]
     steps:
     - uses: actions/checkout@v2
     - name: Установка Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10.0
+        python-version: 3.9.0
     - name: Установка зависимостей
       run: |
         python -m pip install --upgrade pip
-        pip install flake8==3.9.0
+        pip install wemake-python-styleguide==0.16.1
+        pip install mypy
     - name: Flake8
       run: flake8 .
+    - name: Mypy
+      run: mypy .
+
+  send_message:
+    name: Телеграм бот
+    runs-on: ubuntu-latest
+    needs: deploy
+    #if: github.ref == 'refs/heads/master'
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: ${{ github.workflow }} успешно выполнен!
