--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -27,7 +27,7 @@ jobs:
   send_message:
     name: Телеграм бот
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: linter
     #if: github.ref == 'refs/heads/master'
     steps:
       - name: send message
