--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -10,8 +10,10 @@ jobs:
         python-version: [ 3.7, 3.8, 3.9 ]
     steps:
     - uses: actions/checkout@v2
-    - name: Установка Python
+    - name: Установка Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Установка зависимостей
       run: |
         python -m pip install --upgrade pip
