--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -17,18 +17,26 @@ jobs:
     - name: Установка зависимостей
       run: |
         python -m pip install --upgrade pip
-        pip install wemake-python-styleguide==0.15.0
+        pip install wemake-python-styleguide
         pip install mypy
     - name: Flake8
-      run: flake8 .
+      run: |
+          flake8 ./src/ --exit-zero --format=html --htmldir=reports/src/wemake-python-styleguide/
+          flake8 ./etl/ --exit-zero --format=html --htmldir=reports/etl/wemake-python-styleguide/
     - name: Mypy
-      run: mypy .
+      run: |
+          mypy --html-report reports/src/mypy/ src/* || true
+          mypy --html-report reports/etl/mypy/ etl/* || true
+    - name: Upload reports
+      uses: actions/upload-artifact@v2
+      with:
+        name: reports
+        path: reports/
 
   send_message:
     name: Телеграм бот
     runs-on: ubuntu-latest
     needs: linter
-    #if: github.ref == 'refs/heads/master'
     steps:
       - name: send message
         uses: appleboy/telegram-action@master
