--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install wemake-python-styleguide
+        pip install flake8-html
         pip install mypy
     - name: Flake8
       run: |
