--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -14,6 +14,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Создание директорий
+      run: |
+        mkdir -p reports/src/wemake-python-styleguide/
+        mkdir -p reports/etl/wemake-python-styleguide/
     - name: Установка зависимостей
       run: |
         python -m pip install --upgrade pip
