--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -24,6 +24,7 @@ jobs:
         pip install wemake-python-styleguide
         pip install flake8-html
         pip install mypy
+        pip install lxml
     - name: Flake8
       run: |
           flake8 ./src/ --exit-zero --format=html --htmldir=reports/src/wemake-python-styleguide/
@@ -32,7 +33,7 @@ jobs:
       run: |
           mypy --html-report reports/src/mypy/ src/* || true
           mypy --html-report reports/etl/mypy/ etl/* || true
-    - name: Upload reports
+    - name: Загрузка отчетов
       uses: actions/upload-artifact@v2
       with:
         name: reports
@@ -43,9 +44,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: linter
     steps:
-      - name: send message
+      - name: Отправка сообщения
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!
+          message: ${{ github.workflow }} успешно выполнена!
