--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -21,6 +21,7 @@ jobs:
     - name: Установка зависимостей
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install wemake-python-styleguide
         pip install flake8-html
         pip install mypy
