--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -26,14 +26,15 @@ jobs:
         pip install flake8-html
         pip install mypy
         pip install lxml
+        install types-protobuf
     - name: Flake8
       run: |
-          flake8 ./src/ --exit-zero --format=html --htmldir=reports/src/wemake-python-styleguide/
-          flake8 ./etl/ --exit-zero --format=html --htmldir=reports/etl/wemake-python-styleguide/
+          flake8 ./src/ --exit-zero --select=E9,F63,F7,F82 --format=html --htmldir=reports/src/wemake-python-styleguide/
+          flake8 ./etl/ --exit-zero --select=E9,F63,F7,F82 --format=html --htmldir=reports/etl/wemake-python-styleguide/
     - name: Mypy
       run: |
-          mypy --ignore_missing_imports --html-report reports/src/mypy/ src/* || true
-          mypy --ignore_missing_imports --html-report reports/etl/mypy/ etl/* || true
+          mypy --html-report reports/src/mypy/ src/* || true
+          mypy --html-report reports/etl/mypy/ etl/* || true
     - name: Загрузка отчетов
       uses: actions/upload-artifact@v2
       with:
