--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -1,5 +1,12 @@
 name: Проверка сервиса аналитики онлайн-кинотеатра
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   linter:
     name: Линтер
