--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,14 @@ services:
       - '8000:80'
     depends_on:
       - web
+      - logstash
+    volumes:
+      - /tmp/logs/nginx/:/var/log/nginx/
+    logging:
+      driver: gelf
+      options:
+        gelf-address: udp://localhost:5044
+        tag: nginx
 
   etl_analytics:
     build:
@@ -113,6 +121,50 @@ services:
       - clickhouse-node4
       - kafka
     command: python run.py
+
+  elasticsearch:
+      image: elasticsearch:8.2.2
+      environment:
+        - discovery.type=single-node
+      ports:
+        - 9200:9200
+      volumes:
+        - /tmp/esdata:/tmp/elasticsearch/data
+
+  logstash:
+    image: logstash:7.10.1
+    depends_on:
+      - elasticsearch
+    environment:
+      XPACK_MONITORING_ENABLED: "false"
+      ES_HOST: elasticsearch:9200
+    ports:
+      - "5044:5044/udp"
+    volumes:
+      - ./logs/config/logstash.conf:/config/logstash.conf:ro
+      - /tmp/logs/nginx/:/var/log/nginx/:ro
+    command: logstash -f /config/logstash.conf
+
+  kibana:
+    image: kibana:8.2.2
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+
+  filebeat:
+    image: elastic/filebeat:7.3.2
+    volumes:
+      - /tmp/logs/nginx:/var/log/nginx:ro
+      - ./logs/config/filebeat.yml:/usr/share/filebeat/filebeat.yml
+    depends_on:
+      - web
+      - nginx
+      - logstash
+      - elasticsearch
+      - kibana
+    links:
+      - logstash
 
 volumes:
   zookeeper_data:
