--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,4 +32,16 @@ http {
   proxy_set_header   Host             $host;
   proxy_set_header   X-Real-IP        $remote_addr;
   proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+
+  log_format json '{ "time": "$time_local", '
+                   '"remote_ip": "$remote_addr", '
+                   '"remote_user": "$remote_user", '
+                   '"request": "$request", '
+                   '"response": "$status", '
+                   '"bytes": "$body_bytes_sent", '
+                   '"referrer": "$http_referer", '
+                   '"agent": "$http_user_agent", '
+                   '"request_id": "$request_id"}';
+
+  access_log /var/log/nginx/access-log.json json;
 }
