--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   zookeeper:
     image: zookeeper:3.5
+    container_name: ugc-zookeeper
     ports:
       - '2181:2181'
     environment:
@@ -51,6 +52,7 @@ services:
 
   kafka:
     image: 'bitnami/kafka:latest'
+    container_name: ugc-kafka
     ports:
       - '9092:9092'
     environment:
@@ -90,6 +92,7 @@ services:
 
   nginx:
     build: ./nginx
+    container_name: nginx
     ports:
       - '8000:80'
     depends_on:
@@ -107,7 +110,7 @@ services:
     build:
       context: .
       dockerfile: etl/Dockerfile
-    container_name: etl_analytics
+    container_name: etl-analytics
     working_dir: /etl/
     volumes:
       - ./etl:/etl/
@@ -121,18 +124,27 @@ services:
       - clickhouse-node4
       - kafka
     command: python run.py
+    logging:
+      driver: gelf
+      options:
+        gelf-address: udp://localhost:5044
+        tag: etl
 
   elasticsearch:
-      image: elasticsearch:8.2.2
-      environment:
-        - discovery.type=single-node
-      ports:
-        - 9200:9200
-      volumes:
-        - /tmp/esdata:/tmp/elasticsearch/data
+    image: elasticsearch:8.2.2
+    container_name: logs-elasticsearch
+    env_file:
+      - .env.prod
+    environment:
+      - discovery.type=single-node
+    ports:
+      - 9200:9200
+    volumes:
+      - /tmp/esdata:/tmp/elasticsearch/data
 
   logstash:
     image: logstash:7.10.1
+    container_name: logs-logstash
     depends_on:
       - elasticsearch
     environment:
@@ -147,6 +159,7 @@ services:
 
   kibana:
     image: kibana:8.2.2
+    container_name: logs-kibana
     ports:
       - "5601:5601"
     depends_on:
@@ -154,6 +167,8 @@ services:
 
   filebeat:
     image: elastic/filebeat:7.3.2
+    container_name: logs-filebeat
+    command: filebeat -e -strict.perms=false
     volumes:
       - /tmp/logs/nginx:/var/log/nginx:ro
       - ./logs/config/filebeat.yml:/usr/share/filebeat/filebeat.yml
